--- a/Analizar/Cube.html
+++ b/Analizar/Cube.html
@@ -506,7 +506,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i4.i130.image.css:image/base/css*/
 #i130 { opacity: 1; }
 /*#/#*//*#i130.i131.positioning.css:positioning/base/css.1*/
-#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+#i130 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 180px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -516,28 +516,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i334 { opacity: 1; }
 /*#/#*//*#i334.i335.positioning.css:positioning/base/css.2*/
 #i334 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 56px;
-        -ms-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-}
-/*#/#*//*#i4.i336.text.css:text/base/css*/
-#i336 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Light; font-size: 8px; color: #00408b; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i336.i337.positioning.css:positioning/base/css.2*/
-#i336 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 183px; height: 20px;
-        -ms-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-}
-/*#/#*//*#i4.i280.image.css:image/base/css*/
-#i280 { opacity: 1; }
-/*#/#*//*#i280.i281.positioning.css:positioning/base/css.2*/
-#i280 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 32px;
-        -ms-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 186px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 186px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 186px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 186px) rotate(0deg);
 }
 /*#/#*//*#i4.i91.shape.css:shape/base/css*/
 #i91 { background-color: #dedede; opacity: 0.00;
@@ -566,7 +548,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i5.i230.image.css:image/base/css*/
 #i230 { opacity: 1; }
 /*#/#*//*#i230.i231.positioning.css:positioning/base/css.1*/
-#i230 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+#i230 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 180px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -701,32 +683,14 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     background-color: #5AAAD2;
 }
 
-/*#/#*//*#i5.i300.image.css:image/base/css*/
-#i300 { opacity: 1; }
-/*#/#*//*#i300.i301.positioning.css:positioning/base/css.2*/
-#i300 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 32px;
-        -ms-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-}
 /*#/#*//*#i5.i338.image.css:image/base/css*/
 #i338 { opacity: 1; }
 /*#/#*//*#i338.i339.positioning.css:positioning/base/css.2*/
 #i338 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 56px;
-        -ms-transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 165px) rotate(0deg);
-}
-/*#/#*//*#i5.i316.text.css:text/base/css*/
-#i316 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Light; font-size: 8px; color: #00408b; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i316.i317.positioning.css:positioning/base/css.2*/
-#i316 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 183px; height: 20px;
-        -ms-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 185px) rotate(0deg);
 }
 /*#/#*//*#i5.i95.shape.css:shape/base/css*/
 #i95 { background-color: #dedede; opacity: 0.00;
@@ -752,15 +716,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i6.i302.image.css:image/base/css*/
-#i302 { opacity: 1; }
-/*#/#*//*#i302.i303.positioning.css:positioning/base/css.2*/
-#i302 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 119px; height: 32px;
-        -ms-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-        transform: translate(0, 0) translate(179px, 217px) rotate(0deg);
-}
 /*#/#*//*#i6.i272.image.css:image/base/css*/
 #i272 { opacity: 1; }
 /*#/#*//*#i272.i273.positioning.css:positioning/base/css.2*/
@@ -773,7 +728,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i60.image.css:image/base/css*/
 #i60 { opacity: 1; }
 /*#/#*//*#i60.i61.positioning.css:positioning/base/css.1*/
-#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 160px;
+#i60 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 180px;
         -ms-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
@@ -783,19 +738,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i340 { opacity: 1; }
 /*#/#*//*#i340.i341.positioning.css:positioning/base/css.2*/
 #i340 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 56px;
-        -ms-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-        transform: translate(0, 0) translate(6px, 164px) rotate(0deg);
-}
-/*#/#*//*#i6.i318.text.css:text/base/css*/
-#i318 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: Gotham-Light; font-size: 8px; color: #00408b; font-weight: normal; font-style: normal; text-decoration: none; text-align: left; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i318.i319.positioning.css:positioning/base/css.2*/
-#i318 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 183px; height: 20px;
-        -ms-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
-        transform: translate(0, 0) translate(5px, 226px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(6px, 187px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(6px, 187px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(6px, 187px) rotate(0deg);
+        transform: translate(0, 0) translate(6px, 187px) rotate(0deg);
 }
 /*#/#*//*#i6.i99.shape.css:shape/base/css*/
 #i99 { background-color: #ffffff; opacity: 0.00;
@@ -818,30 +764,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0, 0) rotate(0deg);
         transform: translate(0, 0) translate(0, 0) rotate(0deg);
 }
-/*#/#*//*#i304.font-local.css:font/font-local/css*/
-/*#i304.i305.font-local.css:font-local/css.1*/
-@font-face {
-font-family: 'Gotham-Light';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/Gotham-Light.woff') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/') format('opentype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
-/*#/#*//*#i308.font-local.css:font/font-local/css*/
-/*#i308.i309.font-local.css:font-local/css.1*/
-@font-face {
-font-family: 'GothamMedium_1';
-src: url('fonts/');
-src: url('fonts/?#iefix') format('embedded-opentype'),
-url('fonts/GothamMedium_1.woff') format('woff'),
-url('fonts/') format('truetype'),
-url('fonts/') format('opentype'),
-url('fonts/') format('svg');
-}
-/*#/#*/
 /*#/#*/
 </style>
 <!--#/#--></head>
@@ -854,14 +776,9 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/DF5Npho.jpg"/>
+<img id="i130" src="https://i.imgur.com/WzqiVco.jpg"/>
 <!--#/#--><!--#i4.i334.image.html:image/html-->
 <img id="i334" src="https://i.imgur.com/3bpbTQi.png"/>
-<!--#/#--><!--#i4.i336.text.html:text/html-->
-<div id="i336">Vigilado por entidades
- reguladoras de salud.</div>
-<!--#/#--><!--#i4.i280.image.html:image/html-->
-<img id="i280" src="https://i.imgur.com/dmvXJQj.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
 <div id="i91"></div>
 <!--#/#-->
@@ -871,14 +788,9 @@ url('fonts/') format('svg');
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
-<img id="i230" src="https://i.imgur.com/jZ4divg.jpg"/>
-<!--#/#--><!--#i5.i300.image.html:image/html-->
-<img id="i300" src="https://i.imgur.com/dmvXJQj.png"/>
+<img id="i230" src="https://i.imgur.com/Cba1tIX.gif"/>
 <!--#/#--><!--#i5.i338.image.html:image/html-->
 <img id="i338" src="https://i.imgur.com/v7oRBxW.png"/>
-<!--#/#--><!--#i5.i316.text.html:text/html-->
-<div id="i316">Vigilado por entidades
- reguladoras de salud.</div>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
 <div id="i95"></div>
 <!--#/#-->
@@ -887,17 +799,12 @@ url('fonts/') format('svg');
 <div id="i6" class="panel-content-holder">
     <!--#i6.i40.shape.html:shape/html-->
 <div id="i40"></div>
-<!--#/#--><!--#i6.i302.image.html:image/html-->
-<img id="i302" src="https://i.imgur.com/dmvXJQj.png"/>
 <!--#/#--><!--#i6.i272.image.html:image/html-->
 <img id="i272" src="https://i.imgur.com/Qfldi1M.png"/>
 <!--#/#--><!--#i6.i60.image.html:image/html-->
-<img id="i60" src="https://i.imgur.com/ahLfftI.jpg"/>
+<img id="i60" src="https://i.imgur.com/fHuHm2Y.jpg"/>
 <!--#/#--><!--#i6.i340.image.html:image/html-->
 <img id="i340" src="https://i.imgur.com/siDpHPL.png"/>
-<!--#/#--><!--#i6.i318.text.html:text/html-->
-<div id="i318">Vigilado por entidades
- reguladoras de salud.</div>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
 <div id="i99"></div>
 <!--#/#-->
@@ -915,8 +822,6 @@ url('fonts/') format('svg');
         <span>Swipe</span>
     </div>
 </div>
-<!--#/#--><!--#i304.font.html:font/html-->
-<!--#/#--><!--#i308.font.html:font/html-->
 <!--#/#--><!--#/#--><!--#js:common/js-->
 <script>
 /*#i2.cube.js:cube/js.1*/
@@ -947,17 +852,11 @@ document.getElementById('i2').addEventListener('showNext', function(e){
 
 /*#/#*//*#i334.i335.positioning.js:positioning/base/js.2*/
 bmShow('i334');
-/*#/#*//*#i336.i337.positioning.js:positioning/base/js.2*/
-bmShow('i336');
-/*#/#*//*#i4.i280.image.js:image/base/js*/
-
-/*#/#*//*#i280.i281.positioning.js:positioning/base/js.2*/
-bmShow('i280');
 /*#/#*//*#i91.i177.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i91').addEventListener('click', function(e){
     /*#i177.i178.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://catalogo.analizarlab.com/catalogo'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.analizarlab.com/sucursales/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i4.i50.actions.js:actions/base/js*/
@@ -967,21 +866,15 @@ document.getElementById('i91').addEventListener('click', function(e){
      
 /*#/#*//*#i5.i230.image.js:image/base/js*/
 
-/*#/#*//*#i5.i300.image.js:image/base/js*/
-
-/*#/#*//*#i300.i301.positioning.js:positioning/base/js.2*/
-bmShow('i300');
 /*#/#*//*#i5.i338.image.js:image/base/js*/
 
 /*#/#*//*#i338.i339.positioning.js:positioning/base/js.2*/
 bmShow('i338');
-/*#/#*//*#i316.i317.positioning.js:positioning/base/js.2*/
-bmShow('i316');
 /*#/#*//*#i95.i175.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i95').addEventListener('click', function(e){
     /*#i175.i176.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://catalogo.analizarlab.com/catalogo'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.analizarlab.com/sucursales/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
@@ -989,10 +882,6 @@ document.getElementById('i95').addEventListener('click', function(e){
 
 /*#/#*//*#i52.i53.actions-clicktag.js:actions-clicktag/base/js.1*/
      
-/*#/#*//*#i6.i302.image.js:image/base/js*/
-
-/*#/#*//*#i302.i303.positioning.js:positioning/base/js.2*/
-bmShow('i302');
 /*#/#*//*#i6.i272.image.js:image/base/js*/
 
 /*#/#*//*#i272.i273.positioning.js:positioning/base/js.2*/
@@ -1016,13 +905,11 @@ if ('click' === 'click') {
 
 /*#/#*//*#i340.i341.positioning.js:positioning/base/js.2*/
 bmShow('i340');
-/*#/#*//*#i318.i319.positioning.js:positioning/base/js.2*/
-bmShow('i318');
 /*#/#*//*#i99.i179.actions.js:actions/base/js*/
 /* Name: On Click; */
 document.getElementById('i99').addEventListener('click', function(e){
     /*#i179.i180.actions-clicktag.js:actions-clicktag/base/js.1*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://catalogo.analizarlab.com/catalogo'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.analizarlab.com/sucursales/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 /*#/#*//*#i6.i54.actions.js:actions/base/js*/
@@ -1067,15 +954,6 @@ name: TEXTO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i334.i335.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i4.i336.text.meta:text/meta*/
-name: Vigilado por entidades  reguladoras de salud.; customName: false;
-/*#/#*//*#i336.i337.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
-/*#/#*//*#i4.i280.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i280.i281.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i4.i91.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i91.i92.positioning.meta:positioning/meta.1*/
@@ -1091,20 +969,11 @@ name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i230.i231.positioning.meta:positioning/meta.1*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i300.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i300.i301.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i5.i338.image.meta:image/meta*/
 name: TEXTO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i338.i339.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i5.i316.text.meta:text/meta*/
-name: Vigilado por entidades  reguladoras de salud.; customName: false;
-/*#/#*//*#i316.i317.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i95.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i95.i96.positioning.meta:positioning/meta.1*/
@@ -1115,11 +984,6 @@ data: /*!*/{}/*!*/;
 name: Background;
 /*#/#*//*#i40.i41.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i6.i302.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i302.i303.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i6.i272.image.meta:image/meta*/
 name: CTA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
@@ -1135,18 +999,10 @@ name: TEXTO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i340.i341.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i6.i318.text.meta:text/meta*/
-name: Vigilado por entidades  reguladoras de salud.; customName: false;
-/*#/#*//*#i318.i319.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i6.i99.shape.meta:shape/meta*/
 name: Link;
 /*#/#*//*#i99.i100.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i304.font.meta:font/meta*/
-name: Web Font: Gotham-Light; type: font-local; customName: ;
-/*#/#*//*#i308.font.meta:font/meta*/
-name: Web Font: GothamMedium_1; type: font-local; customName: ;
 /*#/#*/--><!--#/#-->
