--- a/Analizar/Venetian320x480.html
+++ b/Analizar/Venetian320x480.html
@@ -2137,29 +2137,20 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i87.image.css:image/base/css*/
 #i87 { opacity: 1; }
 /*#/#*//*#i87.i88.positioning.css:positioning/base/css.2*/
-#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 87px;
-        -ms-transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 392px) rotate(0deg);
+#i87 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 140px;
+        -ms-transform: translate(0, 0) translate(0px, 347px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 347px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 347px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 347px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 20px; color: #00408b; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(20px, 291px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 291px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 291px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 291px) rotate(0deg);
-}
-/*#/#*//*#i93.text.css:text/base/css*/
-#i93 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "GothamMedium_1"; font-size: 12px; color: #00408b; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i93.i94.positioning.css:positioning/base/css.2*/
-#i93 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(20px, 338px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(20px, 338px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(20px, 338px) rotate(0deg);
-        transform: translate(0, 0) translate(20px, 338px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
+        transform: translate(0, 0) translate(20px, 293px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2181,15 +2172,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i96.image.css:image/base/css*/
 #i96 { opacity: 1; }
-/*#/#*//*#i16.image.css:image/base/css*/
-#i16 { opacity: 1; }
-/*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
-#i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 134px; height: 36px;
-        -ms-transform: translate(0, 0) translate(180px, 353px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(180px, 353px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(180px, 353px) rotate(0deg);
-        transform: translate(0, 0) translate(180px, 353px) rotate(0deg);
-}
 /*#/#*//*#slice.css:slice/globalcss*/
 
 /* nav controls*/
@@ -2284,29 +2266,23 @@ url('fonts/') format('svg');
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i87.image.html:image/html-->
-<img id="i87" src="https://i.imgur.com/3v2dAXe.jpg"/>
+<img id="i87" src="https://i.imgur.com/iNC2ax4.jpg"/>
 <!--#/#--><!--#i7.text.html:text/html-->
 <div id="i7">Más de 1200 pruebas para tus diagnósticos.</div>
-<!--#/#--><!--#i93.text.html:text/html-->
-<div id="i93">Vigilado por entidades reguladoras de salud.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/0NJe0nN.jpg"></dataimg>
-<!--#/#--><!--#i2.i73.slice-image.html:slice-image/html.1-->
-<dataimg id="i73" src="https://i.imgur.com/0nrnkD9.jpg"></dataimg>
-<!--#/#--><!--#i2.i95.slice-image.html:slice-image/html.1-->
-<dataimg id="i95" src="https://i.imgur.com/DWFElkT.gif"></dataimg>
+<dataimg id="i72" src="https://i.imgur.com/lXDmo9S.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/oiWhhga.jpg"></dataimg>
-<!--#/#--><!--#i2.i86.slice-image.html:slice-image/html.1-->
-<dataimg id="i86" src="https://i.imgur.com/Pza5ZTY.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/xTvBGPZ.jpg"></dataimg>
+<!--#/#--><!--#i2.i73.slice-image.html:slice-image/html.1-->
+<dataimg id="i73" src="https://i.imgur.com/dq9WdCt.jpg"></dataimg>
+<!--#/#--><!--#i2.i95.slice-image.html:slice-image/html.1-->
+<dataimg id="i95" src="https://i.imgur.com/28Xas49.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i96.image.html:image/html-->
 <img id="i96" src="https://i.imgur.com/kZThkuS.png"/>
-<!--#/#--><!--#i16.image.html:image/html-->
-<img id="i16" src="https://i.imgur.com/dmvXJQj.png"/>
 <!--#/#--><!--#i82.shape.html:shape/html-->
 <div id="i82"></div>
 <!--#/#--><!--#i91.font.html:font/html-->
@@ -2320,8 +2296,6 @@ bmShow('i30');
 bmShow('i87');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
-/*#/#*//*#i93.i94.positioning.js:positioning/base/js.2*/
-bmShow('i93');
 /*#/#*//*#i2.slice.js:slice/js*/
 document.addEventListener('DOMContentLoaded', function() {
     var slicedUnit_i2 = new Adf.SlicedUnit({
@@ -2362,22 +2336,16 @@ document.addEventListener('DOMContentLoaded', function() {
 });
 /*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
 
+/*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
+
 /*#/#*//*#i2.i73.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i2.i95.slice-image.js:slice-image/base/js.1*/
-
-/*#/#*//*#i2.i4.slice-image.js:slice-image/base/js*/
-
-/*#/#*//*#i2.i86.slice-image.js:slice-image/base/js.1*/
 
 /*#/#*//*#i96.image.js:image/base/js*/
 
 /*#/#*//*#i96.i97.positioning.js:positioning/base/js.2*/
 bmShow('i96');
-/*#/#*//*#i16.image.js:image/base/js*/
-
-/*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
-bmShow('i16');
 /*#/#*//*#i82.i83.positioning.js:positioning/base/js.2*/
 bmShow('i82');
 /*#/#*//*#i82.i84.actions.js:actions/base/js.1*/
@@ -2386,7 +2354,7 @@ var el = document.getElementById('i82');
 
 el.addEventListener('click', function(e){
     /*#i84.i85.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'http://catalogo.analizarlab.com/catalogo'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.analizarlab.com/sucursales/'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2419,26 +2387,19 @@ data: /*!*/{"keepAspectRatio":true}/*!*/;
 name: Más de 1200 pruebas para tus diagnósticos.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i93.text.meta:text/meta*/
-name: Vigilado por entidades reguladoras de salud.; customName: false;
-/*#/#*//*#i93.i94.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: 0NJe0nN.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
-/*#/#*//*#i2.i73.slice-image.meta:slice-image/meta.1*/
-name: 0nrnkD9.jpg; fileId: ; sourceTypeId: externalUrl;
-customName: false;
-/*#/#*//*#i2.i95.slice-image.meta:slice-image/meta.1*/
-name: DWFElkT.gif; fileId: ; sourceTypeId: externalUrl;
+name: lXDmo9S.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: oiWhhga.jpg; fileId: ; sourceTypeId: externalUrl;
-/*#/#*//*#i2.i86.slice-image.meta:slice-image/meta.1*/
-name: Pza5ZTY.jpg; fileId: ; sourceTypeId: externalUrl;
+name: xTvBGPZ.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i73.slice-image.meta:slice-image/meta.1*/
+name: dq9WdCt.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
+/*#/#*//*#i2.i95.slice-image.meta:slice-image/meta.1*/
+name: 28Xas49.gif; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
@@ -2446,11 +2407,6 @@ data: /*!*/{}/*!*/;
 name: MARCO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i96.i97.positioning.meta:positioning/meta.2*/
-data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i16.image.meta:image/meta*/
-name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
-customName: 1;
-/*#/#*//*#i16.i17.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i82.shape.meta:shape/meta*/
 name: LINK;
