--- a/Analizar/Venetian320x480.html
+++ b/Analizar/Venetian320x480.html
@@ -2268,17 +2268,17 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i87.image.html:image/html-->
 <img id="i87" src="https://i.imgur.com/iNC2ax4.jpg"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Más de 1200 pruebas para tus diagnósticos.</div>
+<div id="i7">Más de 1200 pruebas diagnósticas.</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/lXDmo9S.jpg"></dataimg>
+<dataimg id="i72" src="https://i.imgur.com/MTNqcoX.jpg"></dataimg>
 <!--#/#--><!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/xTvBGPZ.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/0bwDyAs.jpg"></dataimg>
 <!--#/#--><!--#i2.i73.slice-image.html:slice-image/html.1-->
-<dataimg id="i73" src="https://i.imgur.com/dq9WdCt.jpg"></dataimg>
+<dataimg id="i73" src="https://i.imgur.com/3JWkoe5.jpg"></dataimg>
 <!--#/#--><!--#i2.i95.slice-image.html:slice-image/html.1-->
-<dataimg id="i95" src="https://i.imgur.com/28Xas49.gif"></dataimg>
+<dataimg id="i95" src="https://i.imgur.com/DMZAR2N.gif"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i96.image.html:image/html-->
@@ -2384,22 +2384,22 @@ customName: 1;
 /*#/#*//*#i87.i88.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Más de 1200 pruebas para tus diagnósticos.; customName: false;
+name: Más de 1200 pruebas diagnósticas.; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: lXDmo9S.jpg; fileId: ; sourceTypeId: externalUrl;
+name: MTNqcoX.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: xTvBGPZ.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 0bwDyAs.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i73.slice-image.meta:slice-image/meta.1*/
-name: dq9WdCt.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 3JWkoe5.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i95.slice-image.meta:slice-image/meta.1*/
-name: 28Xas49.gif; fileId: ; sourceTypeId: externalUrl;
+name: DMZAR2N.gif; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
