--- a/Analizar/Cube.html
+++ b/Analizar/Cube.html
@@ -776,7 +776,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/WzqiVco.jpg"/>
+<img id="i130" src="https://i.imgur.com/VM6Zx0v.jpg"/>
 <!--#/#--><!--#i4.i334.image.html:image/html-->
 <img id="i334" src="https://i.imgur.com/3bpbTQi.png"/>
 <!--#/#--><!--#i4.i91.shape.html:shape/html-->
@@ -788,7 +788,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i5.i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i5.i230.image.html:image/html-->
-<img id="i230" src="https://i.imgur.com/Cba1tIX.gif"/>
+<img id="i230" src="https://i.imgur.com/5uUgNG2.gif"/>
 <!--#/#--><!--#i5.i338.image.html:image/html-->
 <img id="i338" src="https://i.imgur.com/v7oRBxW.png"/>
 <!--#/#--><!--#i5.i95.shape.html:shape/html-->
