--- a/Cusqueña Sept/formulario-def.html
+++ b/Cusqueña Sept/formulario-def.html
@@ -596,7 +596,7 @@
     
     #question{
         background: white;
-        background-image: url(http://4.bp.blogspot.com/-QR946AJXmjI/Tz1ovYr_xcI/AAAAAAAAAEM/TN-Z81NLMYw/s1600/cheetos.jpg);
+        background-image: url(https://i.imgur.com/utRUrKj.png);
     }
     
     .subtit{
@@ -657,8 +657,8 @@
             <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
             <form id="question" class="FR form">
                 <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <a href="%%c1;cpdir=" target="_blank"><img class="imagen" src="https://i.imgur.com/wBd8lQu.gif" style="height:354px; width: 300px; text-decoration: none; border-radius:0px; margin-top:2px; margin-left: -30px;
-    box-shadow:0 0 0px 0px #fff; margin-bottom: 10px;"></a></span>
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #;"> <a href="%%c1;cpdir=" target="_blank"><img class="imagen" src="https://i.imgur.com/wBd8lQu.gif" style="height:354px; width: 300px; text-decoration: none; border-radius:0px; margin-top:-2px; margin-left: -30px;
+    box-shadow:0 0 0px 0px ; margin-bottom: 10px;"></a></span>
 
                     <!-- <span style="bottom:5px; text-align:center ; float:center; background-color: #e22532;"> <img src="https://i.imgur.com/zRuYlRY.jpg" style="height:100px; width: 250px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -3px; margin-bottom: -5px;"></span>
 
@@ -666,10 +666,10 @@
 
                     <h2>CONTÁCTANOS</h2>-->
                     <h4 class="subtit">INGRESA TU DNI</h4>
-                    <p class="campos-in"><input placeholder="E-MAIL" name="email" type="email" required="@"></p>
+                    <p class="campos-in"><input placeholder="Número" name="email" type="email" required="number"></p>
                     <!-- <p style="width: 100%; text-align: left; margin-bottom: -24px;" ><input placeholder="APELLIDOS" name="lastName" type="text" required="text" ></p>   -->
-                    <h4 class="subtit" style="margin-top: -8px;">INGRESA TU CODIGO</h4>
-                    <p class="campos-in"><input placeholder="CONFIRME E-MAIL" name="email2" type="email" required="@"></p>
+                    <h4 class="subtit" style="margin-top: 8px;">INGRESA TU CODIGO</h4>
+                    <p class="campos-in"><input placeholder="Número" name="email2" type="email" required="number"></p>
                     <!--   <p style="width: 100%; text-align: left; margin-bottom: -24px;" ><input placeholder="TELÉFONO" name="phone" type="number" required="number" ></p>
                    <p style="width: 100%; text-align: left; margin-bottom: 24px;" ><input placeholder="EMPRESA" name="company" type="text" required="text" ></p>-->
 
