--- a/Mensajeros Urbanos 03/formulario-CON portada.html
+++ b/Mensajeros Urbanos 03/formulario-CON portada.html
@@ -679,7 +679,7 @@
                     <span style="display: flex; flex-direction: row-reverse; justify-content: left; width: 100%; margin-top: 30px; margin-left: 0px;">
 
                         <label style="min-width: 80%" for="condiciones"><a href="https://mensajerosurbanos.dahooxapp.com/template/views/angy_mensajerosurbanos_com/registroaliadosm%C3%A9xico/" target="_blank" style="font-size: 13px; font-family: Arial; text-align: left; color: #105677;">Acepto las
-                                <u><b>políticas de privacidad</b></u></a><a href="https://mensajerosurbanos.dahooxapp.com/template/views/angy_mensajerosurbanos_com/registroaliadosm%C3%A9xico/" target="_blank" style="font-size: 13px; font-family: Arial; text-align: left; color: #105677;  "> y los <u><b>los términos y condiciones.</b>.</u></a></label>
+                                <u><b>políticas de privacidad</b></u></a><a href="https://mensajerosurbanos.dahooxapp.com/template/views/angy_mensajerosurbanos_com/registroaliadosm%C3%A9xico/" target="_blank" style="font-size: 13px; font-family: Arial; text-align: left; color: #105677;  "> y los <u><b>términos y condiciones.</b>.</u></a></label>
 
                    
                    
